# Red-Teaming-Framework

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt  rest_settings_template.json
.github/workflows/: deploy.yml
benching/: bench.py  benchmark.ipynb  benchmark_outs.ipynb  generate.py
benching/backup/: bench copy.py
benching/guide/: custom_llm.md
config/: .gitignore
data/garak/: garak_enc.csv
data/prompts/jailbreak_artifacts/results/: results-jailbreak_artifacts-gpt35.json  results-jailbreak_artifacts-gpt35_triple.json  results-jailbreak_artifacts-gpt4o.json  results-jailbreak_artifacts-yandexgpt3.json
docker/: backend.Dockerfile  frontend.Dockerfile
notebooks/: demo.ipynb
notebooks/common/: demo.ipynb
notebooks/common/deepeval/: custom_red_teamer.py  custom_red_teaming_scan_demo.ipynb  metrics copy.ipynb  metrics.ipynb  synthesis.ipynb  test_prompts.ipynb
notebooks/common/deepeval/data/deepeval/synthetic/: 20240904_105022.json  20240904_214544.json
queries/: init.sql
src/backend/: garak_utils.py  main.py  pg_client.py  schemas.py  settings.py
src/backend/authorization/: authorization_utils.py  jwt_bearer.py  schemas.py
src/backend/routes/: __init__.py  auth.py  garak_list_probes.py  leaderboard_competitors.py  models_list.py  test.py  test_leaderboard.py  upload.py
src/frontend/: _oldmain.py  backend_client.py  leaderboard_utils.py  main.py  settings.py  submit_utils.py
utils/: df_utils.py  load_config.py  load_github.py  load_llms.py  navigate.py  output.py
utils/deepeval/: models.py
utils/garak/: garak_output_parser.py
