[tool.poetry]
name = "red-teaming-framework"
version = "0.1.0"
description = "kind of red teming"
authors = ["ilia <42416069+ilchos@users.noreply.github.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.2.1"
deepeval = "^1.1.7"
langchain-community = "0.2.1"
pandas = "^2.2.2"
ipykernel = "^6.29.5"
yandex-chain = "^0.0.9"
